--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,3 +1,5 @@
+<div style="background-image: linear-gradient(to bottom right,rgba(236, 226, 208, 1),rgba(0,0,0,0.6))">
+<div class="container" style="height: max,">
 <%= @cocktail.name %>
 <br>
 <% @cocktail.doses.each do |dose| %>
@@ -6,7 +8,8 @@
 <%= link_to "Remove", dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } %>
 <br>
 <% end %>
-
+</div>
 
 <%= link_to 'Back', cocktails_path %> |
 <%= link_to 'Add a dose to the recipe', new_cocktail_dose_path(@cocktail) %>
+</div>
