--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -2,4 +2,6 @@
 <%= simple_form_for(@cocktail) do |f| %>
   <%= f.input :name %>
   <%= f.submit %>
+  <%= f.input :photo, as: :file %>
+
 <% end %>
